bad/assign_arr_elem_class_void.example_compiler_output
ERROR
[1mbad/assign_arr_elem_class_void.lat:7:16: [1;31merror: [0;1massigning to `Y` from incompatible type `void`[m
	(new Y[3])[1] = vfunc();
	              [1;32m^[m
